
  * Add detection for implementor Qualcomm

  * Add generic support for QSD8xxx

  * Add support for the HTC Leo, HTC Topaz, HTC Rhodium, HP Jornada 900,
    Medion GoPal E4430, Acer neoTouch S200 F1, HTC Panther (Palm Treo Pro)

  * New commands: SETBIT[P|V], DUMP MSMCLKKHZ (msm/qsd only)

  * Add Samsung S3C64x0 support and gpio function set (tested on Acer M900 device)

20080928 0.5.2 <kevin@koconnor.net>, <ipaqlinux@oliford.co.uk>, <pmiscml@gmail.com>

  * Add support for "Centrality" arm cpus.

  * Better support for MSM7xxx and MSM7xxxA machines.

  * Support arm6 MMU extensions.  The arm6 mmu no longer supports 1K
    "tiny" pages.  It also adds several new page flags.

  * Scan for all 1Meg mappings suitable for virtToPhys translation at
    haret startup.

  * Check that haret is running in "system" mode at startup - warn if
    not.

  * Enhance "mmutrace" to support "stm", "ldm", and "swp"
    instructions.

  * Add new "mmumerge" feature to "wirq".  The "mmumerge" tool allows
    one to detect if wince is changing the mmu mappings during a
    "wirq" session.

  * The high frequency polling system (the "TRACES" variable) will now
    also report the approximate PC location.  This can help find what
    code is changing memory when "mmutrace" isn't available.

  * Support "wirq" even on older machines that don't have
    "allocPhysMem".

  * Support GETGXINFO method of finding the video frame buffer.

  * Only dynamically bind to NLedSetDevice().  This fixes startup
    problems on some wince devices that don't have this function.

20071224 0.5.1 <kevin@koconnor.net>, <pmiscml@gmail.com>

  * The "dump mmu" command now takes an optional physical address
    range.  When this range is specified, only virtual addresses that
    map to the specified physical address range is shown.  For
    example:
       dump mmu 2 0x10000000 1024*1024

  * The ibit and wbit commands can now take a bit range.  For example:
       ibit gpios 58..90
